Add new tests for event queue number changes and modify previous tests to work with the changes in the logic of event queue numbers